--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <!--copied from markdown -->
 
-    <p>嗨，我是<strong>冯嘉健(BY)</strong>，一枚学生。</p>
+    <p>嗨，我是<strong>冯嘉健(Feng)</strong>，一枚学生。</p>
 
 </div>
 
