--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/post-bg-about.jpg"
 
     <!--copied from markdown -->
 
-    <p>嗨，我是<strong>冯嘉健(Feng)</strong>，一枚学生。</p>
+    <p>嗨，我是<strong>冯嘉健(Feng)</strong>，一名学生。</p>
     
     <h5>Talks</h5>
     
