--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@ header-img: "img/post-bg-about.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="https://discordapp.com/">Discord</a></li>
+        <li><a href="https://www.zhihu.com/people/Feng0139/">Zhihu</a></li>
     </ul>
 
 </div>
@@ -37,6 +38,7 @@ header-img: "img/post-bg-about.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="https://discordapp.com/">Discord</a></li>
+        <li><a href="https://www.zhihu.com/people/Feng0139/">Zhihu</a></li>
     </ul>
 
 </div> -->
