--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/post-bg-about.jpg"
 
     <!--copied from markdown -->
 
-    <p>嗨，我是<strong>Feng</strong>，一名学生。</p>
+    <p>嗨，我是<strong>Feng0139</strong>。</p>
 
 </div>
 
@@ -90,7 +90,7 @@ header-img: "img/post-bg-about.jpg"
     repo: '{{site.gitalk.repo}}',
     owner: '{{site.gitalk.owner}}',
     admin: ['{{site.gitalk.admin}}'],
-    distractionFreeMode: {{site.gitalk.distractionFreeMode}},
+    distractionFreeMode: '{{site.gitalk.distractionFreeMode}}',
     id: 'about',
     });
     gitalk.render('gitalk-container');
